improve AccordionLink styling

--- a/src/css/global-styles.scss
+++ b/src/css/global-styles.scss
@@ -53,3 +53,7 @@ $colors: (
   background-color: #cdeed4;
   font-family: "Open Sans", sans-serif;
 }
+
+a {
+  color: map-get($colors, 'green');
+}
