--- a/src/css/global-styles.scss
+++ b/src/css/global-styles.scss
@@ -1,13 +1,13 @@
 /******************************** TACHYONS Customization *******************************/
 
 
-$creme: #fff9eb;
-$green: #00470e;
-$berry: #7b2542;
-$ink: #2b2b2e;
-$light-green: #cdeed4;
-$light-berry: #eecdd8;
-$white: #fff;
+$creme: #FFF9EB;
+$green: #00470E;
+$berry: #7B2542;
+$ink: #2B2B2E;
+$light-green: #E0EBE2;
+$light-berry: #EBE0E4;
+$white: #FFF;
 
 $colors: (
   "creme": $creme,
