set Open Sans as global font

--- a/src/css/global-styles.scss
+++ b/src/css/global-styles.scss
@@ -58,6 +58,10 @@ $colors: (
   }
 }
 
+html, body {
+  font-family: "Open Sans", sans-serif;
+}
+
 .serif {
   font-family: "Libre Baskerville", serif;
 }
